@@ -18,6 +18,13 @@ New in v0.7.11 (2016/09/??)
   - Missing space between par2-options plus default options
 * Fix bug using 40-char sign keys, from Richard McGraw on mail list
   - Remove truncation of argument and adjust comments
+* Merged in lp:~dernils/duplicity/robust-dropbox-backend
+  - Added new command line option --backend-retry-delay
+    that allows to determine the time that duplicity sleeps
+    before retrying after an error has occured.
+  - Added some robustness to dpbxbackend.py that ensures re-authentication
+    happens in case that a socket is changed (e.g. due to a forced reconnect
+    of a dynamic internet connection).
 
 
 New in v0.7.10 (2016/08/20)
